llvm/test/MC/AMDGPU/ds_gws_sgpr_err.s
// NOTE: Assertions have been autogenerated by utils/update_mc_test_checks.py UTC_ARGS: --unique --sort --version 6
// RUN: not llvm-mc -triple=amdgpu6.00 -filetype=null %s 2>&1 | FileCheck %s
// RUN: not llvm-mc -triple=amdgpu7.04 -filetype=null %s 2>&1 | FileCheck %s
// RUN: not llvm-mc -triple=amdgpu9.08 -filetype=null %s 2>&1 | FileCheck %s
// RUN: not llvm-mc -triple=amdgpu9.0a -filetype=null %s 2>&1 | FileCheck %s

ds_gws_barrier s1 gds
// CHECK: :[[@LINE-1]]:16: error: invalid operand for instruction

ds_gws_barrier s2 gds
// CHECK: :[[@LINE-1]]:16: error: invalid operand for instruction

ds_gws_init s0 offset:65535 gds
// CHECK: :[[@LINE-1]]:13: error: invalid operand for instruction

ds_gws_init s1 offset:65535 gds
// CHECK: :[[@LINE-1]]:13: error: invalid operand for instruction

ds_gws_init s[0:1] offset:65535 gds
// CHECK: :[[@LINE-1]]:13: error: invalid operand for instruction

ds_gws_sema_br s1 gds
// CHECK: :[[@LINE-1]]:16: error: invalid operand for instruction

ds_gws_sema_br s2 gds
// CHECK: :[[@LINE-1]]:16: error: invalid operand for instruction


ds_gws_sema_v s1 gds
// CHECK: :[[@LINE-1]]:15: error: invalid operand for instruction

ds_gws_sema_v s2 gds
// CHECK: :[[@LINE-1]]:15: error: invalid operand for instruction
